# fantasy

./: .gitignore  CNAME  README.md  asset-manifest.json  index.html  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: update.yml
data/: AtlantaHustle2019-stats-4597087672991744.csv  ChicagoWildfire2019-stats-5684092356001792.csv  fantasy_scores.json  player-stats-Brackets.csv  player-stats-Pool-A.csv  player-stats-Pool-B.csv  player-stats.csv  players.json  sample.json  stats.csv  teams.json  volunteers.json
frontend/: .prettierrc.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: LeaderboardRow.jsx  Navbar.jsx  PlayerRow.jsx  SponsorList.jsx  TeamList.jsx  VolunteerList.jsx
frontend/src/data/: fantasy_scores.json  players.json  players_sample.json  sponsors.json  teams.json  volunteers.json
frontend/src/pages/: Home.jsx  Leaderboard.jsx  PlayerProfile.jsx  PlayersList.jsx  Rules.jsx
frontend/src/utils/: fantasyCommons.js
scripts/: deploy-site.sh  download-data.py  fantasy-scores.py  generate-team-list.py  player_stats.py  translate.py  update-data.sh  update.sh
static/css/: main.a28de207.css  main.a28de207.css.map
static/js/: main.21f6c5ab.js  main.21f6c5ab.js.LICENSE.txt  main.21f6c5ab.js.map
