[tool.poetry]
name = "fantasy"
version = "0.1.0"
description = ""
authors = ["Jonathan Samuel <jonathansamuel2k@gmail.com>",
           "Puneeth Chaganti <punchagan@muse-amuse.in>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
